Allow authprogs_config role in relative folder (#13)
* Allow use of authprogs_config role in playbook in a sub-folder
* Allow use of authprogs_config role if `site_files` folder is not in repo root
* fix auhtprogs_install on Python3 boxes

--- a/authprogs_config/tasks/main.yml
+++ b/authprogs_config/tasks/main.yml
@@ -1,7 +1,11 @@
 ---
 
 - name: "Authprogs Configuration"
-  copy: src="site_files/{{inventory_hostname}}/root/.ssh/authprogs.yaml"  dest="/root/.ssh/"
+  copy: 
+    src: "{{ authprogs_site_files_relative_path }}site_files/{{inventory_hostname}}/root/.ssh/authprogs.yaml"
+    dest: "/root/.ssh/"
 
 - name: "Authprogs Keys"
-  copy: src="site_files/{{inventory_hostname}}/root/.ssh/authorized_keys" dest="/root/.ssh/"
+  copy:
+    src: "{{ authprogs_site_files_relative_path }}site_files/{{inventory_hostname}}/root/.ssh/authorized_keys"
+    dest: "/root/.ssh/"
