--- a/authprogs_install/tasks/main.yml
+++ b/authprogs_install/tasks/main.yml
@@ -2,9 +2,14 @@
 
 - name: "Authprogs Install Pre-requisites | Python 3"
   apt: 
-    package: python3-pip
+    name: python3-pip
     update_cache: yes
 
 - name: "Authprogs Install"
   pip:
     name: authprogs
+
+- name: "Authprogs Install post cleanup | Python 3"
+  apt: 
+    name: python3-pip
+    state: absent
